test_regress/t/t_pp_defparen_bad.out
%Error: t/t_pp_defparen_bad.v:11:2: Illegal text before '(' that starts define arguments
   11 |  ( 1,2)
      |  ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_pp_defparen_bad.v:11:1: syntax error, unexpected '('
   11 | ((val  1) + (2))
      | ^
%Error: Exiting due to
